--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,25 @@
     <link rel="icon" type="image/svg+xml" href="/crul.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="./public/manifest.json" />
+    <meta property="og:title" content="CRUL" />
+        <meta
+          property="og:description"
+          content="Generate AI Image using your descriptions"
+        />
+        <meta property="og:site_name" content="CRUL" />
+        <meta property="og:url" content="https://crul.vercel.app" key="ogurl" />
+        <meta property="og:image" content='/src/assets/img/CRUL_OG.png' />
+
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:creator" content="@Emmanuel_Omoiya" />
+        <meta name="twitter:title" content="CRUL" />
+        <meta
+          name="twitter:description"
+          content="Generate AI Image using your descriptions"
+        />
+        <meta name="twitter:domain" content='https://crul.vercel.app' /> 
+        <meta name="twitter:image" content="/src/assets/img/CRUL_OG.png" />
+        <meta name="twitter:image:alt" content="CRUL"></meta>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <title>CRUL</title>
   </head>
