--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="./public/manifest.json" />
     <meta property="og:title" content="CRUL" />
-        <meta
+    <meta
           property="og:description"
           content="Generate AI Image using your descriptions"
         />
@@ -23,7 +23,7 @@
         />
         <meta name="twitter:domain" content='https://crul.vercel.app' /> 
         <meta name="twitter:image" content="/src/assets/img/CRUL_OG.png" />
-        <meta name="twitter:image:alt" content="CRUL"></meta>
+        <meta name="twitter:image:alt" content="CRUL"/>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <title>CRUL</title>
   </head>
