--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- <script>
+    <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker
@@ -46,6 +46,6 @@
             });
         });
       }
-    </script> -->
+    </script>
   </body>
 </html>
