--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/crul.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="./public/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" size="180x180" href="/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
+    <link rel="icon" type="imgae/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta property="og:title" content="CRUL" />
     <meta
           property="og:description"
@@ -12,7 +16,7 @@
         />
         <meta property="og:site_name" content="CRUL" />
         <meta property="og:url" content="https://crul.vercel.app" key="ogurl" />
-        <meta property="og:image" content='/src/assets/img/CRUL_OG.png' />
+        <meta property="og:image" content='https://crul.vercel.app/assets/img/CRUL_OG.png' />
 
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Emmanuel_Omoiya" />
@@ -22,10 +26,10 @@
           content="Generate AI Image using your descriptions"
         />
         <meta name="twitter:domain" content='https://crul.vercel.app' /> 
-        <meta name="twitter:image" content="/src/assets/img/CRUL_OG.png" />
+        <meta name="twitter:image" content="https://crul.vercel.app/assets/img/CRUL_OG.png" />
         <meta name="twitter:image:alt" content="CRUL"/>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <title>CRUL</title>
+    <title>CRUL - Generate AI images using your descriptions</title>
   </head>
   <body>
     <div id="root"></div>
